--- a/quadratic_two_stage_pha_clean.ipynb
+++ b/quadratic_two_stage_pha_clean.ipynb
@@ -212,7 +212,7 @@
     "        \n",
     "        # Gurobi: Add constraints\n",
     "        problem.addConstr(A@x == b)\n",
-    "        problem.addConstr(T_list[w]@x + W_list[w]@y[w] == h_list[w])\n",
+    "        problem.addConstr(T_list[w]@x + W_list[w]@y == h_list[w])\n",
     "        \n",
     "        # Gurobi: Set objective\n",
     "        obj = x@np.diag(c)@x + x@(0.5*Q)@x + y@np.diag(q_list[w])@y + y@(0.5*D_list[w])@y  \n",
